cycle concluded with multiples of 3 and 5

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <title>Document</title>
 </head>
 <body>
-  <span><h1>BuzzFizz</h1></span>
+  <span><h1>BuzzFizz</h1>
+  <p>
+    Clicca sui multipli di 3: se diventa "Fizz" passi allo step successivo;
+    <br>
+    Clicca sui multipli di 5: se diventa "Buzz" passi all'ultimo step;
+    <br>
+    Seleziona i multipli di 3 e di 5: se il risultato sarà "BuzzFizz" hai vinto!
+  </p></span>
   <div class="container">
     
   </div>
